compiler/tests/fixtures/invalid/semantics/duplicate_action_selector_name.viv
// Invalid: duplicate action-selector name

action wave:
    roles:
        @waver:
            as: initiator

action-selector greet:
    roles:
        @greeter:
            as: initiator
    target randomly:
        wave;

action-selector greet:
    roles:
        @greeter:
            as: initiator
    target randomly:
        wave;
